[workspace]
resolver = "2"

members = [
    "crates/neptune/",
    "crates/systems/asset",
    "crates/systems/task_scheduler/",
    "crates/utils/error/",
    "crates/utils/logging/",
    "crates/utils/id/",
]

[workspace.dependencies]
asset = { path = "crates/systems/asset" }
task_scheduler = { path = "crates/systems/task_scheduler/" }
error = { path = "crates/utils/error/" }
logging = { path = "crates/utils/logging/" }
id = { path = "crates/utils/id/" }

winit = "0.30.0"
surrealdb = { version = "1.5.0", default-features = false, features = ["kv-speedb"]}
rkyv = { version = "0.7.44", features = ["strict"] }
